# Cargo.toml (Workspace Root)
[workspace]
resolver = "2"
members = [
    "crates/invariant_shared",
    "crates/invariant_engine",
    "crates/invariant_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Invariant Architect"]
license = "BSL-1.1"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
anyhow = "1.0"

# --- Crypto & Security ---
p256 = { version = "0.13", features = ["ecdsa", "std"] }
signature = "2.0"
sha2 = "0.10"
x509-parser = {version = "0.16", features = ["verify"] }
der-parser = "9.0"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
proptest = "1.0"
rand_chacha = "0.3"         
hmac = "0.12"
ring = { version = "0.17", features = ["std"] }
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
pem = "3.0"

# 🛡️Envelope Encryption & Caching
aws-config = "1.1"
aws-sdk-kms = "1.16"
aws-smithy-types = "1.1"
moka = { version = "0.12", features = ["future"] }

# --- Server & Database ---
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = [
    "cors", "trace", "compression-full", "timeout", "set-header", "sensitive-headers", "request-id", "util"
] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter", "json"] }
base64 = "0.21"
redis = { version = "1.0.2", features = ["tokio-comp"] }
once_cell = "1.18"
gcp_auth = "0.10"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.1"

# --- Admin UI & Docs ---
futures = "0.3"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }